--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
 .App {
-  text-align: center;
+  max-width: 50em;
+  margin: 0 auto;
+  padding: 32px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-image: url("https://www.androidguys.com/wp-content/uploads/2015/12/Poly-Lakeside.jpg");
+  background-size: cover;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.todo-input {
+  font-size: 24px;
+  color: white;
+  border: dotted;
+  border-radius: 10px;
+  border-color: grey;
+  padding: 10px;
+  width: 100%;
+  background-color: transparent;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo-input:focus {
+  border-color: white;
+  outline: none;
+}
+
+.done {
+  text-decoration: line-through;
+}
+
+.todo {
+  margin: 32px 0px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 24px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.checkbox {
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  margin-right: 10px;
+  cursor: pointer;
+  background: #d9d9d9;
+  font-size: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #fff;
+  transition: all 300ms ease;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.checkbox:hover {
+  opacity: 0.8;
+}
+
+.delete {
+  margin-left: auto;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.delete:hover {
+  opacity: 0.8;
+}
+
+.list-of-todos {
+  margin-top: 20px;
+  border-radius: 10px;
+  padding: 0px 10px 0px 10px;
+  border: solid;
+  border-color: white;
+  width: 100%;
+}
+
+.list-of-todos:empty {
+  border: none;
 }
